--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -29,10 +29,10 @@ jobs:
         flake8 . --count --exit-zero --max-line-length=80 --ignore=E111,E121,E126 --statistics
     
     - name: tshirts fail
-      run: bash .github/workflows/expectfail.sh python tshirts.py
+      run:  python tshirts.py
     
     - name: misaligned fail
-      run: bash .github/workflows/expectfail.sh python test_misaligned.py
+      run:  python test_misaligned.py
 
     - name: alerter fail
-      run: bash .github/workflows/expectfail.sh python test_alerter.py
+      run: python test_alerter.py
